Jira importer consumes output (prevents import from waiting forever).